fixed component Id issues, arrow issues

--- a/lti-coe/ui.apps/src/main/content/jcr_root/apps/coe/components/core/Jumbotron/v1/jumbotron/jumbotron.html
+++ b/lti-coe/ui.apps/src/main/content/jcr_root/apps/coe/components/core/Jumbotron/v1/jumbotron/jumbotron.html
@@ -1,4 +1,4 @@
-<sly data-sly-use.carousel="coe.core.models.CarouselModel"></sly>
+
 <sly data-sly-use.jumbotron="coe.core.models.JumbotronModel"></sly>
 
 
@@ -12,7 +12,7 @@
 
 </style>
 
-<div id="${properties.componentId}" class="jumbotron-backgroundImg jumbotron-foreground" 
+<div  class="jumbotron-backgroundImg jumbotron-foreground" 
 style="background-image:url('${properties.bgFileReference @ context='styleString'}');">
 
 <sly data-sly-test="${wcmmode.edit || wcmmode.design}">
