--- a/lti-coe/ui.apps/src/main/content/jcr_root/apps/coe/components/core/socialfeed/v1/socialfeed/socialfeed.html
+++ b/lti-coe/ui.apps/src/main/content/jcr_root/apps/coe/components/core/socialfeed/v1/socialfeed/socialfeed.html
@@ -1,49 +1,23 @@
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet" />
-
 <sly data-sly-use.social="coe.core.models.SocialFeedModel"></sly>
 
-<script data-sly-test="${social.socialurl}">
-    function share_fb() {
-        console.log("${social.socialurl @ context='html'}");
-        window.open('https://www.facebook.com/sharer/sharer.php?u='+"${social.socialurl @ context='html'}&quote="+"${social.socialtitle @context='html'}",'facebook-share-dialog',"width=626, height=436")
-    }
-    
-    function share_twitter() {
-        console.log("${social.socialurl @ context='html'}");
-        window.open('http://twitter.com/share?url='+"${social.socialurl @ context='html'}&title="+"${social.socialtitle @context='html'}",'_blank', 'width=550,height=420')
-    }
-    
-    function share_linkedin() {
-        console.log("${social.socialurl @ context='html'}");
-        window.open('https://www.linkedin.com/sharing/share-offsite/?url='+"${social.socialurl @ context='html'}",'_blank','left=20,top=20,width=500,height=500,toolbar=1,resizable=0')
-    }
-</script>
+<sly data-sly-test.url="${request.requestURL.toString}"/>
+<sly data-sly-test="${social.socialurl}">
+    <sly data-sly-test.url="${social.socialurl}"/>
+</sly>
 
-<script data-sly-test="${!social.socialurl}">
-    function share_fb() {
-        console.log("${request.requestURL.toString @ context='html'}");
-        window.open('https://www.facebook.com/sharer/sharer.php?u='+"${request.requestURL.toString @ context='html'}&quote="+"${social.socialtitle @context='html'}",'facebook-share-dialog',"width=626, height=436")
-    }
-    
-    function share_twitter() {
-        console.log("${request.requestURL.toString @ context='html'}");
-        window.open('http://twitter.com/share?url='+"${request.requestURL.toString @ context='html'}&title="+"${social.socialtitle @context='html'}",'_blank', 'width=550,height=420')
-    }
-    
-    function share_linkedin() {
-        console.log("${request.requestURL.toString @ context='html'}");
-        window.open('https://www.linkedin.com/sharing/share-offsite/?url='+"${request.requestURL.toString @ context='html'}",'_blank','left=20,top=20,width=500,height=500,toolbar=1,resizable=0')
-    }
-</script>
-
-<a href="#" style="color: #3b5998;" onclick="share_fb();return false;" rel="nofollow" target="_blank">
+<div id="${social.componentId}" class="${social.uniqueClassName}">
+<a href="#" class="coe__socialfeed_fb" style="color: #3b5998;" rel="nofollow" target="_blank" data-url="${url}" data-summary="${social.socialsummary}" data-title="${social.socialtitle}">
     <i class="fab fa-facebook-f fa-2x" data-sly-test="${social.fb}"></i>
 </a>&ensp;
 
-<a href="#" style="color: #55acee;" onclick="share_twitter();return false;" target="_blank" >
+<a href="#" class="coe__socialfeed_twitter" style="color: #55acee;" target="_blank"  data-url="${url}" data-summary="${social.socialsummary}"  data-title="${social.socialtitle}">
     <i class="fab fa-twitter fa-2x" data-sly-test="${social.twitter}"></i> 
 </a>&ensp; 
 
-<a href="#" style="color: #0e76a8;" onclick="share_linkedin();return false;" rel="nofollow" target="_blank">
+<a href="#" class="coe__socialfeed_ln" style="color: #0e76a8;" rel="nofollow" target="_blank"  data-url="${url}" data-summary="${social.socialsummary}"  data-title="${social.socialtitle}">
     <i class="fab fa-linkedin-in fa-2x" data-sly-test="${social.linkedin}"></i>
 </a> 
+</div>
+
+
+
