--- a/lti-coe/ui.apps/src/main/content/jcr_root/apps/coe/components/core/googlemap/v1/googlemap/googlemap.html
+++ b/lti-coe/ui.apps/src/main/content/jcr_root/apps/coe/components/core/googlemap/v1/googlemap/googlemap.html
@@ -1,13 +1,13 @@
+
+
+<h1>My First Google Map</h1>
 <div>
   <input id="address" type="textbox" placeholder="Enter address" />
   <input id="submit" type="button" value="Search" />
 </div>
 <br>
+<div id="googleMap" style="width:100%;height:400px;"></div>
 
-<div id="map"></div>
 
-<!-- Async script executes immediately and must be after any DOM elements used in callback. -->
-<script
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDQR4UaLO-0sHqhw5SOD7RP4iJoH_243b4&callback=initMap&libraries=&v=weekly"
-  async
-></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDOT0a0KMcIBlhaVTBwaNvykqsfBM2lgE8&callback=initMap"></script>
+
